[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "novant"
version = "0.1.0"
description = "Python SDK for the Novant API"
license = "MIT"
requires-python = ">=3.10"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]

[tool.setuptools.packages.find]
include = ["novant*"]
